Add photo gallery feature with responsive design

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                 
                 <div class="footer-links">
                     <h3>Quick Links<br>
-                        <span class="hindi hindi-font">त्वरित लिंक</span>
+                        <span class="hindi hindi-font">लिंक</span>
                     </h3>
                     <ul>
                         <li><a href="#home"><i class="fas fa-chevron-right"></i> Home / होम</a></li>
