Add photo gallery feature with responsive design

--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
                     </h3>
                     <p>From floral mandaps to contemporary stage designs, we create stunning decor blending traditional motifs with modern aesthetics.</p>
                 </div>
+
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-spa"></i>
+                    </div>
+                    <h3>Photography & Video Shooting<br>
+                        <span class="hindi hindi-font">फोटोग्राफी & वीडिओ शूटिंग </span>
+                    </h3>
+                    <p>Professional Camera & Video Shooting, specializing in Indian wedding cinematic shoot , drone-shoot , and shooting  for all ceremonies.</p>
+                </div>
                 
                 <div class="service-card">
                     <div class="service-icon">
